fix blurry bug

--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ Download page
 }
 
 .affix {
-    position: fixed;
+    position: static;
 }
 
 .affix-bottom {
